add support flyway and refactor user service/controller