@@ -7,7 +7,6 @@ import com.example.quizcardspetspring.repository.UserRepository;
 import com.example.quizcardspetspring.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.stereotype.Service;
 
@@ -17,19 +16,12 @@ public class UserServiceDefaultImpl implements UserService {
 
     private final UserRepository userRepository;
 
-    @Override
-    public ResponseEntity<Long> createUser(User user) {
-        if (this.userRepository.existsByEmail(user.getUsername())) {
+    public User saveUser(User user) {
+        if (this.userRepository.existsById(user.getId())) {
             throw new UserAlreadyExistException(
-                    HttpStatus.CONFLICT,
-                    "User with name: %s already exists".formatted(user.getUsername())
+                    HttpStatus.CONFLICT, String.format("User with id %s already exists", user.getId())
             );
         }
-
-        return new ResponseEntity<>(this.userRepository.save(user).getId(), HttpStatus.CREATED);
-    }
-
-    public User saveUser(User user) {
         return this.userRepository.save(user);
     }
 
@@ -47,31 +39,29 @@ public class UserServiceDefaultImpl implements UserService {
     }
 
     @Override
-    public ResponseEntity<Iterable<User>> getUsers() {
-        return new ResponseEntity<>(this.userRepository.findAll(), HttpStatus.ACCEPTED);
+    public Iterable<User> getUsers() {
+        return this.userRepository.findAll();
     }
 
     @Override
-    public ResponseEntity<User> getUserById(Long id) {
-        User user = this.userRepository
-                .findById(id)
-                .orElseThrow(() -> new UserDoesNotExistException(
+    public User getUserById(Long id) {
+        return this.userRepository.findById(id).orElseThrow(
+                () -> new UserDoesNotExistException(
                         HttpStatus.NOT_FOUND,
-                        "user does not exist with id = %d".formatted(id)));
-
-        return new ResponseEntity<>(user, HttpStatus.ACCEPTED);
-
+                        "User does not exist with id = %d.".formatted(id))
+        );
     }
 
     @Override
-    public ResponseEntity<User> deleteUserById(Long id) {
-        User user = this.userRepository
-                .findById(id)
-                .orElseThrow(() -> new UserDoesNotExistException(HttpStatus.NOT_FOUND,
-                        "user does not exist with id = %d".formatted(id)));
+    public User deleteUserById(Long id) {
+        final User user = this.userRepository.findById(id).orElseThrow(
+                () -> new UserDoesNotExistException(
+                        HttpStatus.NOT_FOUND,
+                        "User does not exist with id = %d.".formatted(id))
+        );
 
         this.userRepository.deleteById(id);
 
-        return new ResponseEntity<>(user, HttpStatus.ACCEPTED);
+        return user;
     }
 }
